Fix about me on mobile

--- a/src/sections/About/AboutStyles.module.css
+++ b/src/sections/About/AboutStyles.module.css
@@ -2,11 +2,24 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    width: fit-content;
   }
   
 .paragraph {
     text-align: center;
     padding-top: 0px;
-    padding-left: 400px;
-    padding-right: 400px;
+}
+
+span {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+
+  a {
+    margin: 0;
+
+    img {
+      width: 30px;
+    }
+  }
 }
